	  first one only;
	* lbabl_get_internet_address(): append separate InternetAddress
	  to a GList instead on returning the first one only.

2018-01-24  Albrecht Dreß  <albrecht.dress@arcor.de>

	* libbalsa/html.c (lbh_web_process_terminated_cb): new signal in
	  webkit version 2.20;
	  (libbalsa_html_new): do not auto-load images if any are
	  external (that is, not cid: data)
2019-01-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* ui/main-window.ui: Shuffle some menu items;
	see https://gitlab.gnome.org/GNOME/balsa/issues/14

2019-01-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* ui/main-window.ui: Restore 'm' shortcut for "New message"

2019-01-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove application menu

	GNOME has decided that application menus, shown in the top bar
	of the GNOME desktop, are a bad idea. It was kind of a stretch
	for Balsa to implement one, so it shouldn't be too hard to drop
	it.

	* src/main-window.c (settings_activated),
	(bw_add_win_action_entries), (balsa_window_add_action_entries),
	(bw_set_menus): move the appmenu items that are not already
	duplicate in the File: menu back there;
	* ui/main-window.ui: ditto.

2018-01-20  Albrecht Dreß  <albrecht.dress@arcor.de>

	Do not trigger a CRITICAL message when request for a Message
	Disposition Notification is activated
	Fixes
	https://mail.gnome.org/archives/balsa-list/2019-January/msg00018.html

	* libbalsa/message.c (libbalsa_message_set_dispnotify): test
	whether message->headers->dispnotify_to is NULL before unreffing
	it.

2018-01-13  Albrecht Dreß  <albrecht.dress@arcor.de>

	Get the Autocrypt headers from Balsa's user-headers instead of
	from a GMimeMessage, which doesn't always exist.

	* libbalsa/autocrypt.c (scan_autocrypt_headers): new function
	for scanning Balsa's user-headers;
	(autocrypt_from_message): use it, instead of
	g_mime_object_get_header_list() and friends;
	(parse_autocrypt_header): extend the (debug) output when